@@ -1,5 +1,6 @@
 package me.mister.jobs.gui;
 
+import me.mister.jobs.Job;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
@@ -7,69 +8,69 @@ import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class JobAdminMenu {
 
     public Inventory getMenu(Player p) {
 
-        Inventory inv = Bukkit.createInventory(null, 36, "§b§lAdministration des Métiers");
+        Inventory inv = Bukkit.createInventory(null, 45, "§b§lAdministration des Métiers");
 
-        // Fond moderne bleu/cyan
+        // Fond cyan moderne
         ItemStack glass = new ItemStack(Material.CYAN_STAINED_GLASS_PANE);
         ItemMeta gMeta = glass.getItemMeta();
         gMeta.setDisplayName(" ");
         glass.setItemMeta(gMeta);
 
-        for (int i = 0; i < 36; i++) {
+        for (int i = 0; i < 45; i++) {
             inv.setItem(i, glass);
         }
 
         // MINEUR
         ItemStack mineur = new ItemStack(Material.DIAMOND_PICKAXE);
         ItemMeta mMeta = mineur.getItemMeta();
-        mMeta.setDisplayName("§bÉditer Mineur");
-        mMeta.setLore(Arrays.asList(
+        mMeta.setDisplayName("§eÉditer Mineur");
+        mMeta.setLore(List.of(
                 "§7Configurer les blocs du métier",
                 "§7et l'XP qu'ils donnent.",
                 "",
-                "§bClique pour ouvrir"
+                "§bClique pour ouvrir l'éditeur"
         ));
         mineur.setItemMeta(mMeta);
-        inv.setItem(10, mineur);
+        inv.setItem(20, mineur);
 
         // BUCHERON
         ItemStack bucheron = new ItemStack(Material.DIAMOND_AXE);
         ItemMeta bMeta = bucheron.getItemMeta();
-        bMeta.setDisplayName("§bÉditer Bûcheron");
-        bMeta.setLore(Arrays.asList(
+        bMeta.setDisplayName("§eÉditer Bûcheron");
+        bMeta.setLore(List.of(
                 "§7Configurer les blocs du métier",
                 "§7et l'XP qu'ils donnent.",
                 "",
-                "§bClique pour ouvrir"
+                "§bClique pour ouvrir l'éditeur"
         ));
         bucheron.setItemMeta(bMeta);
-        inv.setItem(12, bucheron);
+        inv.setItem(22, bucheron);
 
         // FERMIER
         ItemStack fermier = new ItemStack(Material.DIAMOND_HOE);
         ItemMeta fMeta = fermier.getItemMeta();
-        fMeta.setDisplayName("§bÉditer Fermier");
-        fMeta.setLore(Arrays.asList(
+        fMeta.setDisplayName("§eÉditer Fermier");
+        fMeta.setLore(List.of(
                 "§7Configurer les blocs du métier",
                 "§7et l'XP qu'ils donnent.",
                 "",
-                "§bClique pour ouvrir"
+                "§bClique pour ouvrir l'éditeur"
         ));
         fermier.setItemMeta(fMeta);
-        inv.setItem(14, fermier);
+        inv.setItem(24, fermier);
 
         // Bouton retour
         ItemStack back = new ItemStack(Material.ARROW);
         ItemMeta backMeta = back.getItemMeta();
         backMeta.setDisplayName("§cRetour");
         back.setItemMeta(backMeta);
-        inv.setItem(31, back);
+        inv.setItem(40, back);
 
         return inv;
     }
